<resources>
    <string name="app_name">WalkiePaws</string>
    <string name="login">Войти</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="lose">Вы проиграли</string>
    <string name="textlose">К сожалению ваш тамагочи обиделся и ушёл, пройдите 1500 шагов чтобы вернуть его.</string>
    <string name="newgame">Вернуть тамагочи</string>
    <string name="auth">Авторизация</string>
    <string name="reg">Регистрация</string>
    <string name="write_login">Введите логин</string>
    <string name="write_password">Введите пароль</string>
    <string name="back">Назад</string>
    <string name="stat">Статистика</string>
    <string name="settings">НАСТРОЙКИ</string>
    <string name="music">Музыка</string>
    <string name="sound">Звук</string>
    <string name="current_character">Текущий персонаж</string>
    <string name="steps_count_template">Количество шагов за неделю: %s</string>
    <string name="steps_label">Шаги</string>
    <string name="food">Еда</string>
    <string name="cloths">Одежда</string>
    <string name="rooms">Комната</string>
</resources>