<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#c4e1ed"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textNameGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="70dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="70dp"
        android:text="@string/app_name"
        android:textColor="@color/main_color_auth"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="9dp"
        android:text="@string/auth"
        android:textColor="@color/main_color_auth"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/writeLogin"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:importantForAutofill="no"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/write_login"
        android:inputType="text"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/writePassword"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:importantForAutofill="no"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/write_password"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="180dp"
        android:backgroundTint="@color/main_color_auth"
        android:text="@string/login"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/main_color_auth"
        android:text="@string/registration"
        android:textSize="15sp" />

</LinearLayout>