<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#c4e1ed"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/textRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:text="@string/reg"
        android:textColor="@color/main_color_auth"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/editTextWriteLogin"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:importantForAutofill="no"
        android:textColorHint="@color/main_color_auth"
        android:ems="10"
        android:textColor="@color/main_color_auth"
        android:hint="@string/write_login"
        android:inputType="text"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextWritePassword"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:importantForAutofill="no"
        android:textColorHint="@color/main_color_auth"
        android:ems="10"
        android:textColor="@color/main_color_auth"
        android:hint="@string/write_password"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonRegistration"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="180dp"
        android:backgroundTint="@color/main_color_auth"
        android:text="@string/registration"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/main_color_auth"
        android:textColor="@color/white"
        android:text="@string/back"
        android:textSize="15sp" />

</LinearLayout>